# Omage

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: GITHUB_SETUP.md
examples/advanced/: 01_custom_model.py
examples/beginner/: 01_hello.py  02_model_zoo.py  03_finetune.py  test.py
omage/: __init__.py
omage/cli/: __init__.py  main.py
omage/compiler/: __init__.py  generator.py  parser.py  transpiler.py
omage/core/: __init__.py  data.py  layers.py  losses.py  model.py  optimizers.py  train.py
omage/loops/: __init__.py  flow.py  grow.py  polish.py  seek.py
omage/types/: __init__.py  omage_types.py
omage/utils/: __init__.py  bridge.py
omage/zoo/: __init__.py  models.py
tests/: test_data.py  test_layers.py  test_loops.py  test_model.py
